# portfolio

./: Cargo.toml  Dioxus.toml  build.rs
assets/: tailwind.css
assets/images/: 2023_04_15.json  2023_05_27.json  2023_05_30.json  2023_07_21.json  2023_07_30.json  2023_08_23.json  2023_08_30.json  2023_11_11.json  2023_12_09.json  2023_12_10.json  2024_01_05.json  2024_01_30.json  2024_02_02_2.json  2024_03_17.json  2024_04_15.json  2024_08_31.json  2024_10_12.json  2025_05_12.json  2025_05_21.json  2025_07_24.json  2025_08_14.json  2025_09_15.json  2025_09_29.json  2025_09_29_2.json  2025_11_11.json  2025_11_27.json  2025_12_06.json  2026_01_14.json  2026_01_14_czn.json  2026_01_25.json  2026_02_07.json  2026_02_24.json  2026_02_24_2.json  2026_03_21.json  2026_03_26.json  2026_03_26_2.json  2026_04_01.json  2026_04_18.json  2026_05_01.json
src/: gallery.rs  home.rs  home_api.rs  main.rs
