[package]
name = "portfolio"
version = "0.1.0"
authors = ["allimehcla <allimehcla@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.6", features = ["fullstack", "router"] }
serde = "1.0.228"
base64 = { version = "0.22.1", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:base64"]
