[package]
name = "portfolio"
version = "0.1.0"
authors = ["allimehcla <allimehcla@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.7.6"

[features]
default = []
web = ["dioxus/web"]

[build-dependencies]
serde_json = "1.0"
quote = "1.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
syn = "2.0.117"
